tests/machine/x/cpp/partial_application.mochi.error
line 4: ../../../tests/machine/x/cpp/partial_application.mochi.cpp:4:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    4 | auto add(auto a, auto b) {
      |          ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:4:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
    4 | auto add(auto a, auto b) {
      |                  ^~~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:9:24: error: no matching function for call to ‘add(int)’
    9 |         auto add5 = add(5);
      |                     ~~~^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:4:6: note: candidate: ‘template<class auto:28, class auto:29> auto add(auto:28, auto:29)’
    4 | auto add(auto a, auto b) {
      |      ^~~
../../../tests/machine/x/cpp/partial_application.mochi.cpp:4:6: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/partial_application.mochi.cpp:9:24: note:   candidate expects 2 arguments, 1 provided
    9 |         auto add5 = add(5);
      |                     ~~~^~~

  3 | 
  4 | auto add(auto a, auto b) {
  5 | 	return (a + b);
